--- a/en/index.html
+++ b/en/index.html
@@ -112,7 +112,7 @@
 </section>
 
     
-<div class="py-3 bg-light">
+<div class="py-3" style="background-color:#e1e1e1">
     <div class="container px-5 my-5">
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-10 col-xl-7">
