--- a/en/index.html
+++ b/en/index.html
@@ -61,7 +61,7 @@
 <section class="py-3" id="features">
     <div class="container px-5 mt-5">
         <div class="row gx-5">
-            <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">What kind of resource is suitable for you?</h2></div>
+            <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">What is your media?</h2></div>
             <div class="col-lg-8">
                 <div class="row gx-5 row-cols-1 row-cols-md-2">
                     
