Added more films

--- a/en/films.html
+++ b/en/films.html
@@ -21,11 +21,11 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link" href="films.html">Films</a></li><li class="nav-item"><a class="nav-link" href="books.html">Books</a></li><li class="nav-item"><a class="nav-link" href="apps.html">Apps</a></li><li class="nav-item"><a class="nav-link" href="stat.html">Statistics</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/en">Home</a></li><li class="nav-item"><a class="nav-link" href="/en/films.html">Films</a></li><li class="nav-item"><a class="nav-link" href="/en/books.html">Books</a></li><li class="nav-item"><a class="nav-link" href="/en/apps.html">Apps</a></li><li class="nav-item"><a class="nav-link" href="/en/stat.html">Statistics</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">English</a>
                                 <ul class="dropdown-menu dropdown-menu-end">
-                                    <li><a class="dropdown-item" href="../pl/index.html">Polski</a></li><li><a class="dropdown-item" href="../uk/index.html">Українська</a></li><li><a class="dropdown-item" href="../ru/index.html">Русский</a></li>
+                                    <li><a class="dropdown-item" href="/pl">Polski</a></li><li><a class="dropdown-item" href="/uk">Українська</a></li><li><a class="dropdown-item" href="/ru">Русский</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -45,6 +45,16 @@
                 <div class="card-body p-4">
                     <a class="text-decoration-none link-dark stretched-link" href="https://youtu.be/3XrY2TP0ZyU" target="_blank"><div class="h5 card-title mb-3">Earthlings</div></a>
                     <p class="card-text mb-0">Narrated by Joaquin Phoenix, writer/director Shaun Monson's 2005 documentary about humanity's economic dependence and treatment of animals is a sobering, hard-hitting reality check into the pet, food, clothing, entertainment, and scientific industries.</p>
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-lg-3 col-md-4 col-sm-6 mb-5">
+            <div class="card h-100 shadow border-0">
+                <img height=180 class="card-img-top" src="https://i1.ytimg.com/vi/SN9hIRM3R0A/hqdefault.jpg" alt="..." style="object-fit: cover;">
+                <div class="card-body p-4">
+                    <a class="text-decoration-none link-dark stretched-link" href="https://www.youtube.com/watch?v=SN9hIRM3R0A" target="_blank"><div class="h5 card-title mb-3">What the Health</div></a>
+                    <p class="card-text mb-0">This documentary film critiques the health impact of meat, fish, eggs and dairy products consumption, and questions the practices of leading health and pharmaceutical organizations. Its primary purpose is to advocate for a plant-based diet.</p>
                 </div>
             </div>
         </div>
@@ -95,6 +105,16 @@
                 <div class="card-body p-4">
                     <a class="text-decoration-none link-dark stretched-link" href="https://www.youtube.com/watch?v=MIl6aRS452E" target="_blank"><div class="h5 card-title mb-3">The Game Changers</div></a>
                     <p class="card-text mb-0">The Game Changers tells the story of James Wilks – elite Special Forces trainer and The Ultimate Fighter winner – as he travels the world on a quest to uncover the optimal diet for human performance. Showcasing elite athletes, special ops soldiers, visionary scientists, cultural icons, and everyday heroes, what James discovers permanently changes his understanding of food and his definition of true strength.</p>
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-lg-3 col-md-4 col-sm-6 mb-5">
+            <div class="card h-100 shadow border-0">
+                <img height=180 class="card-img-top" src="https://www.dominionmovement.com/images/video-frame.jpg" alt="..." style="object-fit: cover;">
+                <div class="card-body p-4">
+                    <a class="text-decoration-none link-dark stretched-link" href="https://www.youtube.com/watch?v=LQRAfJyEsko" target="_blank"><div class="h5 card-title mb-3">Dominion</div></a>
+                    <p class="card-text mb-0">Dominion uses drones, hidden and handheld cameras to expose the dark underbelly of modern animal agriculture, questioning the morality and validity of humankind’s dominion over the animal kingdom. While mainly focusing on animals used for food, it also explores other ways animals are exploited and abused by humans, including clothing, entertainment and research.</p>
                 </div>
             </div>
         </div>
