--- a/en/index.html
+++ b/en/index.html
@@ -21,11 +21,11 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link" href="films.html">Films</a></li><li class="nav-item"><a class="nav-link" href="books.html">Books</a></li><li class="nav-item"><a class="nav-link" href="apps.html">Apps</a></li><li class="nav-item"><a class="nav-link" href="stat.html">Statistics</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/en">Home</a></li><li class="nav-item"><a class="nav-link" href="/en/films.html">Films</a></li><li class="nav-item"><a class="nav-link" href="/en/books.html">Books</a></li><li class="nav-item"><a class="nav-link" href="/en/apps.html">Apps</a></li><li class="nav-item"><a class="nav-link" href="/en/stat.html">Statistics</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">English</a>
                                 <ul class="dropdown-menu dropdown-menu-end">
-                                    <li><a class="dropdown-item" href="../pl/index.html">Polski</a></li><li><a class="dropdown-item" href="../uk/index.html">Українська</a></li><li><a class="dropdown-item" href="../ru/index.html">Русский</a></li>
+                                    <li><a class="dropdown-item" href="/pl">Polski</a></li><li><a class="dropdown-item" href="/uk">Українська</a></li><li><a class="dropdown-item" href="/ru">Русский</a></li>
                                 </ul>
                             </li>
                         </ul>
