Add contact block, fix footer

--- a/en/films.html
+++ b/en/films.html
@@ -150,8 +150,16 @@
         <!-- Footer-->
         <footer class="bg-dark py-4 mt-auto">
             <div class="container px-5">
-                <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0 text-white">Vegan Cube 2024</div></div>
+                <div class="row align-items-center justify-content-between flex-column flex-sm-row small">
+                    <div class="col-auto py-2"><div class="m-0 text-white">Vegan Warrior Club. 2024</div></div>
+                    <div class="col-auto">
+                        <a class="px-2 link-dark py-1" href="https://www.instagram.com/vegan_warrior_club/">
+                            <span class="bi-instagram" style="filter: invert(100%);"></span> <span class="text-decoration-none text-light">vegan_warrior_club</span>
+                        </a>
+                        <span class="px-2 py-1">
+                            <span class="bi-envelope" style="filter: invert(100%);"></span> <span class="text-light">vegan_warrior_club@proton.me</span>
+                        </span>
+                    </div>
                 </div>
             </div>
         </footer>
