--- a/en/index.html
+++ b/en/index.html
@@ -71,7 +71,7 @@
                             <span class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-film"></i></span>
                             <h2 class="h5 mx-3 mt-2">Films</h2>
                         </div>
-                        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at tincidunt nisi. Aenean dui odio, blandit at semper a, finibus vitae nulla.</p>
+                        <p class="mb-0">Curated list of the best films about animal liberation.</p>
                     </div>
                     </a>
                     
@@ -91,7 +91,7 @@
                             <span class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-layout-wtf"></i></span>
                             <h2 class="h5 mx-3 mt-2">Apps</h2>
                         </div>
-                        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at tincidunt nisi. Aenean dui odio, blandit at semper a, finibus vitae nulla.</p>
+                        <p class="mb-0">Useful applications and websites, like restaurants locator or a recipes catalog.</p>
                     </div>
                     </a>
                     
