--- a/en/books.html
+++ b/en/books.html
@@ -9,6 +9,7 @@
         <link rel="icon" type="image/x-icon" href="../templates/assets/favicon.ico" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <link href="../templates/css/styles.css" rel="stylesheet" />
+        <script defer data-domain="vegancube.github.io" src="https://plausible.io/js/script.js"></script>
     </head>
     <body class="d-flex flex-column h-100">
         <main class="flex-shrink-0">
@@ -38,7 +39,7 @@
     <h2 class="fw-bolder fs-5 mb-4">Selected Books</h2>
     <div class="row gx-3">
         
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-5">
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
             <div class="card h-100 shadow border-0">
                 <img height=450 class="card-img-top" src="https://books.google.com/books/publisher/content?id=dOEnEAAAQBAJ&printsec=frontcover&img=1&zoom=2&edge=curl&imgtk=AFLRE71bE_3mTwfBRt0urFuZIbibWU3Pnu3mr4Ps6jz4tEnv4i1-SyO5xNYVpkMAmKV7I0j2QE-0AdH22T5_verXRBj6exxhmRFiSOesIrMJgFJTXuXuzSQ4yiFklYwT1MvXQCTk9fT4" alt="..." style="object-fit: cover;">
                 <div class="card-body p-4">
@@ -51,7 +52,7 @@
             </div>
         </div>
         
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-5">
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
             <div class="card h-100 shadow border-0">
                 <img height=450 class="card-img-top" src="https://upload.wikimedia.org/wikipedia/en/2/26/Animal_Liberation%2C_1975_edition.jpg" alt="..." style="object-fit: cover;">
                 <div class="card-body p-4">
@@ -75,12 +76,14 @@
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row small">
                     <div class="col-auto py-2"><div class="m-0 text-white">Vegan Warrior Club. 2024</div></div>
                     <div class="col-auto">
-                        <a class="px-2 link-dark py-1" href="https://www.instagram.com/vegan_warrior_club/">
-                            <span class="bi-instagram" style="filter: invert(100%);"></span> <span class="text-decoration-none text-light">vegan_warrior_club</span>
-                        </a>
-                        <span class="px-2 py-1">
+                        <div class="px-2 py-1">
+                            <a class="link-dark" href="https://www.instagram.com/vegan_warrior_club/">
+                                <span class="bi-instagram" style="filter: invert(100%);"></span> <span class="text-decoration-none text-light">vegan_warrior_club</span>
+                            </a>
+                        </div>
+                        <div class="px-2 py-1">
                             <span class="bi-envelope" style="filter: invert(100%);"></span> <span class="text-light">vegan_warrior_club@proton.me</span>
-                        </span>
+                        </div>
                     </div>
                 </div>
             </div>
