--- a/pl/index.html
+++ b/pl/index.html
@@ -9,6 +9,7 @@
         <link rel="icon" type="image/x-icon" href="../templates/assets/favicon.ico" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <link href="../templates/css/styles.css" rel="stylesheet" />
+        <script defer data-domain="vegancube.github.io" src="https://plausible.io/js/script.js"></script>
     </head>
     <body class="d-flex flex-column h-100">
         <main class="flex-shrink-0">
@@ -58,12 +59,14 @@
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row small">
                     <div class="col-auto py-2"><div class="m-0 text-white">Vegan Warrior Club. 2024</div></div>
                     <div class="col-auto">
-                        <a class="px-2 link-dark py-1" href="https://www.instagram.com/vegan_warrior_club/">
-                            <span class="bi-instagram" style="filter: invert(100%);"></span> <span class="text-decoration-none text-light">vegan_warrior_club</span>
-                        </a>
-                        <span class="px-2 py-1">
+                        <div class="px-2 py-1">
+                            <a class="link-dark" href="https://www.instagram.com/vegan_warrior_club/">
+                                <span class="bi-instagram" style="filter: invert(100%);"></span> <span class="text-decoration-none text-light">vegan_warrior_club</span>
+                            </a>
+                        </div>
+                        <div class="px-2 py-1">
                             <span class="bi-envelope" style="filter: invert(100%);"></span> <span class="text-light">vegan_warrior_club@proton.me</span>
-                        </span>
+                        </div>
                     </div>
                 </div>
             </div>
