Add polish index

--- a/en/books.html
+++ b/en/books.html
@@ -65,6 +65,19 @@
             </div>
         </div>
         
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+            <div class="card h-100 shadow border-0">
+                <img height=450 class="card-img-top" src="https://books.google.com/books/publisher/content?id=RjMGAwAAQBAJ&printsec=frontcover&img=1&zoom=2&edge=curl&imgtk=AFLRE737XPJgbAIyxk0ZZHFpUG0STro7a9dOLbvYRDNA0_njaQ3HgwlHqvmjcUcc49wQtMN5QE3UPvHwbOShtVSwPsXk8iLYqwrJ2DT_lgYMlJC-sSbnaGt_k7M3FTdTIUajHCIB3HYy" alt="..." style="object-fit: cover;">
+                <div class="card-body p-4">
+                    <a class="text-decoration-none link-dark stretched-link" href="https://books.google.com/books?id=RjMGAwAAQBAJ&printsec=frontcover&cad=0" target="_blank">
+                        <div class="h5 card-title mb-1">Meat Is for Pussies</div>
+                    </a>
+                    <div class="small text-muted mb-3">by John Joseph, 2014</div>
+                    <p class="card-text mb-0">The author offers both personal and scientific evidence that a plant-based diet offers the best path to athleticism, endurance, strength, and overall health. In addition to dispelling the myths surrounding meat, Joseph offers workout advice, a meal plan, and recipes that make going plant-based easy.</p>
+                </div>
+            </div>
+        </div>
+        
     </div>
 </div>
 
