--- a/en/index.html
+++ b/en/index.html
@@ -138,7 +138,7 @@
     <div class="text-center">
         <h2 class="fw-bolder">Contact</h2>
         <p class="text-muted mb-2">
-            <span class="text-primary fs-5">vegan_warrior_club@proton.me</span>
+            <span class="fs-5">vegan_warrior_club@proton.me</span>
         </p>
         <p class="text-muted mb-2">
             <span class="h6 fw-bolder">Follow us: </span>
