--- a/pl/books.html
+++ b/pl/books.html
@@ -16,17 +16,17 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="">
+                    <a class="navbar-brand" href="/pl">
                         <img width="40" height="40" src="../templates/assets/favicon.ico">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link" href="movies.html">Movies</a></li><li class="nav-item"><a class="nav-link" href="books.html">Books</a></li><li class="nav-item"><a class="nav-link" href="apps.html">Apps</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/pl">Główna</a></li><li class="nav-item"><a class="nav-link" href="/pl/films.html">Kino</a></li><li class="nav-item"><a class="nav-link" href="/pl/books.html">Książki</a></li><li class="nav-item"><a class="nav-link" href="/pl/apps.html">Aplikacje</a></li><li class="nav-item"><a class="nav-link" href="/pl/stat.html">Statystyka</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Polski</a>
                                 <ul class="dropdown-menu dropdown-menu-end">
-                                    <li><a class="dropdown-item" href="../en/index.html">English</a></li><li><a class="dropdown-item" href="../uk/index.html">Українська</a></li><li><a class="dropdown-item" href="../ru/index.html">Русский</a></li>
+                                    <li><a class="dropdown-item" href="/en">English</a></li><li><a class="dropdown-item" href="/uk">Українська</a></li><li><a class="dropdown-item" href="/ru">Русский</a></li>
                                 </ul>
                             </li>
                         </ul>
