--- a/en/index.html
+++ b/en/index.html
@@ -39,7 +39,7 @@
     <div class="container px-5">
         <div class="row gx-5 align-items-center justify-content-center">
             <a class="d-xl-none pt-3" href="https://www.youtube.com/watch?v=LQRAfJyEsko">
-                <img class="img-fluid rounded-3" src="https://www.dominionmovement.com/images/video-frame.jpg" alt="..." target="_blank"/>
+                <img class="img-fluid rounded-3" src="../templates/assets/dominion.jpg" alt="..." target="_blank"/>
             </a>
             <div class="col-lg-8 col-xl-7 col-xxl-6">
                 <div class="my-5 text-center text-xl-start">
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center">
-                <a href="https://www.youtube.com/watch?v=LQRAfJyEsko"><img class="img-fluid rounded-3 my-5" src="https://www.dominionmovement.com/images/video-frame.jpg" alt="..." target="_blank"/></a>
+                <a href="https://www.youtube.com/watch?v=LQRAfJyEsko"><img class="img-fluid rounded-3 my-5" src="../templates/assets/dominion.jpg" alt="..." target="_blank"/></a>
             </div>
         </div>
     </div>
@@ -118,13 +118,13 @@
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-10 col-xl-7">
                 <div class="text-center">
-                    <div class="fs-4 mb-4 fst-italic">“We’re exploiting female bodies and abusing the magic of female animals to create eggs and milk. It doesn’t take a lot to draw the line from how we treat animals to how we treat humans.”</div>
+                    <div class="fs-4 mb-4 fst-italic">“It takes nothing away from a human to be kind to an animal.”</div>
                     <div class="d-flex align-items-center justify-content-center">
-                        <img width="40" height="40" class="rounded-circle me-3" src="../templates/assets/natalie.jpg" alt="..." />
+                        <img width="40" height="40" class="rounded-circle me-3" src="../templates/assets/joaquin.jpg" alt="..." />
                         <div class="fw-bold">
-                            Natalie Portman
+                            Joaquin Phoenix
                             <span class="fw-bold text-primary mx-1">/</span>
-                            American actress
+                            American actor
                         </div>
                     </div>
                 </div>
