--- a/en/films.html
+++ b/en/films.html
@@ -59,7 +59,7 @@
                     <a class="text-decoration-none link-dark stretched-link" href="https://www.youtube.com/watch?v=SN9hIRM3R0A" target="_blank">
                         <div class="h5 card-title mb-1">What the Health</div>
                     </a>
-                    <div class="small text-muted mb-3">2017</div>
+                    <div class="small text-muted mb-3">2017, Netflix</div>
                     <p class="card-text mb-0">This documentary film critiques the health impact of meat, fish, eggs and dairy products consumption, and questions the practices of leading health and pharmaceutical organizations. Its primary purpose is to advocate for a plant-based diet.</p>
                 </div>
             </div>
@@ -72,7 +72,7 @@
                     <a class="text-decoration-none link-dark stretched-link" href="https://opsociety.org/ops-productions/films/you-are-what-you-eat-a-twin-experiment/" target="_blank">
                         <div class="h5 card-title mb-1">You Are What You Eat: A Twin Experiment</div>
                     </a>
-                    <div class="small text-muted mb-3">2024</div>
+                    <div class="small text-muted mb-3">2024, Netflix</div>
                     <p class="card-text mb-0">Identical twins change their diets and lifestyles for eight weeks in a unique scientific experiment designed to explore how certain foods impact the body.</p>
                 </div>
             </div>
@@ -98,7 +98,7 @@
                     <a class="text-decoration-none link-dark stretched-link" href="https://www.netflix.com/nl-en/title/81014008" target="_blank">
                         <div class="h5 card-title mb-1">Seaspiracy</div>
                     </a>
-                    <div class="small text-muted mb-3">2021</div>
+                    <div class="small text-muted mb-3">2021, Netflix</div>
                     <p class="card-text mb-0">Passionate about ocean life, a filmmaker sets out to document the harm that humans do to marine species — and uncovers alarming global corruption.</p>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                     <a class="text-decoration-none link-dark stretched-link" href="https://www.netflix.com/nl-en/title/80091936" target="_blank">
                         <div class="h5 card-title mb-1">Okja</div>
                     </a>
-                    <div class="small text-muted mb-3">2017</div>
+                    <div class="small text-muted mb-3">2017, Netflix</div>
                     <p class="card-text mb-0">A gentle giant and the girl who raised her are caught in the crossfire between animal activism, corporate greed and scientific ethics.</p>
                 </div>
             </div>
