--- a/pl/index.html
+++ b/pl/index.html
@@ -70,7 +70,7 @@
                     <div class="col mb-5 h-100">
                         <div class="d-flex justify-content-start">
                             <span class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-film"></i></span>
-                            <h2 class="h5 mx-3 mt-2">Films</h2>
+                            <h2 class="h5 mx-3 mt-2">Filmy</h2>
                         </div>
                         <p class="mb-0">Lista najlepszych filmów o wyzwoleniu zwierząt</p>
                     </div>
@@ -80,7 +80,7 @@
                     <div class="col mb-5 h-100">
                         <div class="d-flex justify-content-start">
                             <span class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-book"></i></span>
-                            <h2 class="h5 mx-3 mt-2">Books</h2>
+                            <h2 class="h5 mx-3 mt-2">Książki</h2>
                         </div>
                         <p class="mb-0">Najlepsze książki o weganizmie i środowisku</p>
                     </div>
@@ -90,7 +90,7 @@
                     <div class="col mb-5 h-100">
                         <div class="d-flex justify-content-start">
                             <span class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-layout-wtf"></i></span>
-                            <h2 class="h5 mx-3 mt-2">Recipes and other apps</h2>
+                            <h2 class="h5 mx-3 mt-2">Przepisy i inne aplikacje</h2>
                         </div>
                         <p class="mb-0">Przydatne aplikacje i strony internetowe, takie jak lokalizator restauracji lub katalog przepisów kulinarnych</p>
                     </div>
@@ -100,7 +100,7 @@
                     <div class="col mb-5 h-100">
                         <div class="d-flex justify-content-start">
                             <span class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-bar-chart-line"></i></span>
-                            <h2 class="h5 mx-3 mt-2">Statistics</h2>
+                            <h2 class="h5 mx-3 mt-2">Statystyka</h2>
                         </div>
                         <p class="mb-0">Rolnictwo i dane ekologiczne</p>
                     </div>
@@ -118,13 +118,13 @@
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-10 col-xl-7">
                 <div class="text-center">
-                    <div class="fs-4 mb-4 fst-italic">“We’re exploiting female bodies and abusing the magic of female animals to create eggs and milk. It doesn’t take a lot to draw the line from how we treat animals to how we treat humans.”</div>
+                    <div class="fs-4 mb-4 fst-italic">“Pod względem intelektualnym ludzie i zwierzęta mogą się różnić, ale jest oczywiste, że zwierzęta mają bogate życie emocjonalne, czują radość i ból. Bardzo prosto ludziom zapomnieć o prostej zależności pomiędzy hamburgerem a krową, z której on pochodzi.”</div>
                     <div class="d-flex align-items-center justify-content-center">
-                        <img width="40" height="40" class="rounded-circle me-3" src="../templates/assets/natalie.jpg" alt="..." />
+                        <img width="40" height="40" class="rounded-circle me-3" src="../templates/assets/moby_face.jpg" alt="..." />
                         <div class="fw-bold">
-                            Natalie Portman
+                            Moby
                             <span class="fw-bold text-primary mx-1">/</span>
-                            American actress
+                            muzyk
                         </div>
                     </div>
                 </div>
