--- a/pl/index.html
+++ b/pl/index.html
@@ -39,7 +39,7 @@
     <div class="container px-5">
         <div class="row gx-5 align-items-center justify-content-center">
             <a class="d-xl-none pt-3" href="https://www.youtube.com/watch?v=LQRAfJyEsko">
-                <img class="img-fluid rounded-3" src="https://www.dominionmovement.com/images/video-frame.jpg" alt="..." target="_blank"/>
+                <img class="img-fluid rounded-3" src="../templates/assets/dominion.jpg" alt="..." target="_blank"/>
             </a>
             <div class="col-lg-8 col-xl-7 col-xxl-6">
                 <div class="my-5 text-center text-xl-start">
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center">
-                <a href="https://www.youtube.com/watch?v=LQRAfJyEsko"><img class="img-fluid rounded-3 my-5" src="https://www.dominionmovement.com/images/video-frame.jpg" alt="..." target="_blank"/></a>
+                <a href="https://www.youtube.com/watch?v=LQRAfJyEsko"><img class="img-fluid rounded-3 my-5" src="../templates/assets/dominion.jpg" alt="..." target="_blank"/></a>
             </div>
         </div>
     </div>
