--- a/en/apps.html
+++ b/en/apps.html
@@ -41,7 +41,7 @@
         
         <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
             <div class="card h-100 shadow border-0">
-                <img height=210 class="card-img-top" src="https://www.happycow.net/img/app-page/large/cover-phone-2.png" alt="..." style="object-fit: cover;">
+                <img height=210 class="card-img-top" src="../templates/assets/happycow.png" alt="..." style="object-fit: cover;">
                 <div class="card-body p-4">
                     <a class="text-decoration-none link-dark stretched-link" href="https://www.happycow.net" target="_blank">
                         <div class="h5 card-title mb-1">Happy Cow</div>
