--- a/pl/index.html
+++ b/pl/index.html
@@ -90,9 +90,9 @@
                     <div class="col mb-5 h-100">
                         <div class="d-flex justify-content-start">
                             <span class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-layout-wtf"></i></span>
-                            <h2 class="h5 mx-3 mt-2">Przepisy i inne aplikacje</h2>
+                            <h2 class="h5 mx-3 mt-2">Dietetyka i inne</h2>
                         </div>
-                        <p class="mb-0">Przydatne aplikacje i strony internetowe, takie jak lokalizator restauracji lub katalog przepisów kulinarnych</p>
+                        <p class="mb-0">Przydatne aplikacje i strony internetowe: dietetyka, przepisy, sport, lokalizator restauracji, inne</p>
                     </div>
                     </a>
                     
