--- a/pl/index.html
+++ b/pl/index.html
@@ -92,7 +92,7 @@
                             <span class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-layout-wtf"></i></span>
                             <h2 class="h5 mx-3 mt-2">Dietetyka i inne</h2>
                         </div>
-                        <p class="mb-0">Przydatne aplikacje i strony internetowe: dietetyka, przepisy, sport, lokalizator restauracji, inne</p>
+                        <p class="mb-0">Dietetyka, przepisy, sport, lokalizator restauracji, blogi, inne</p>
                     </div>
                     </a>
                     
