New navbar logo

--- a/pl/apps.html
+++ b/pl/apps.html
@@ -17,7 +17,7 @@
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container px-5">
                     <a class="navbar-brand" href="/pl">
-                        <img width="40" height="40" src="../templates/assets/favicon.ico">
+                        <img height="40" src="../templates/assets/vwc_navlogo.png">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
