--- a/uk/index.html
+++ b/uk/index.html
@@ -44,7 +44,7 @@
             <div class="col-lg-8 col-xl-7 col-xxl-6">
                 <div class="my-5 text-center text-xl-start">
                     <h1 class="display-5 fw-bolder text-white mb-2">Земляни</h1>
-                    <p class="lead fw-normal text-white-50 mb-4">Дрони, приховані та ручні камери використовуються для викриття темного підпілля сучасного тваринництва, ставлячи під сумнів моральність панування людини над тваринним світом. Хоча основна увага зосереджена на тваринах, яких вирощують для їжі, фільм також показує, як їх використовують для виготовлення одягу, розваг і досліджень.</p>
+                    <p class="lead fw-normal text-white-50 mb-4">Зйомки з дронів, прихованих і ручних камер оголюють темну таємницю сучасного тваринництва, ставлячи під сумнів моральність панування людини над тваринним світом. Хоча основна увага зосереджена на тваринах, яких вирощують для їжі, фільм також показує, як їх використовують для виготовлення одягу, розваг і досліджень.</p>
                     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                         <a class="btn btn-primary btn-lg px-4 me-sm-3" href="https://www.youtube.com/watch?v=JnphWWm-mTU" target="_blank">Дивіться на Youtube</a>
                         
