--- a/ru/index.html
+++ b/ru/index.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center">
-                <a href="https://www.youtube.com/watch?v=BCbNxKvLglQ"><img class="img-fluid rounded-3 my-5" src="../templates/assets/dominion.jpg" alt="..." target="_blank"/></a>
+                <a href="https://www.youtube.com/watch?v=BCbNxKvLglQ" target="_blank"><img class="img-fluid rounded-3 my-5" src="../templates/assets/dominion.jpg" alt="..." target="_blank"/></a>
             </div>
         </div>
     </div>
