--- a/pl/index.html
+++ b/pl/index.html
@@ -47,7 +47,7 @@
                     <p class="lead fw-normal text-white-50 mb-4">Drony, ukryte i ręczne kamery są wykorzystywane do ujawnienia mrocznego podbrzusza współczesnej hodowli zwierząt, kwestionując moralność panowania ludzkości nad królestwem zwierząt. Skupiając się głównie na zwierzętach wykorzystywanych do produkcji żywności, pokazuje również ich wykorzystanie do produkcji odzieży, rozrywki i badań.</p>
                     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                         <a class="btn btn-primary btn-lg px-4 me-sm-3" href="https://www.youtube.com/watch?v=LQRAfJyEsko" target="_blank">Oglądaj na Youtube</a>
-                        <a class="btn btn-outline-light btn-lg px-4" href="/pl/films.html">Więcej filmów</a>
+                        <a class="btn btn-outline-light btn-lg px-4" href="films.html">Więcej filmów</a>
                     </div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
 <section class="py-3" id="features">
     <div class="container px-5 mt-5">
         <div class="row gx-5">
-            <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">Jakie są Twoje media?</h2></div>
+            <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">Polecamy</h2></div>
             <div class="col-lg-8">
                 <div class="row gx-5 row-cols-1 row-cols-md-2">
                     
