--- a/en/index.html
+++ b/en/index.html
@@ -47,7 +47,7 @@
                     <p class="lead fw-normal text-white-50 mb-4">Drones, hidden and handheld cameras are used to expose the dark underbelly of modern animal agriculture, questioning the morality of humankind’s dominion over the animal kingdom. While mainly focusing on animals used for food, it also shows using them for clothing, entertainment and research.</p>
                     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                         <a class="btn btn-primary btn-lg px-4 me-sm-3" href="https://www.youtube.com/watch?v=LQRAfJyEsko" target="_blank">Watch on Youtube</a>
-                        <a class="btn btn-outline-light btn-lg px-4" href="/en/films.html">More films</a>
+                        <a class="btn btn-outline-light btn-lg px-4" href="films.html">More films</a>
                     </div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
 <section class="py-3" id="features">
     <div class="container px-5 mt-5">
         <div class="row gx-5">
-            <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">What is your media?</h2></div>
+            <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">We recommend</h2></div>
             <div class="col-lg-8">
                 <div class="row gx-5 row-cols-1 row-cols-md-2">
                     
