--- a/uk/index.html
+++ b/uk/index.html
@@ -38,9 +38,12 @@
 <header class="bg-dark py-3">
     <div class="container px-5">
         <div class="row gx-5 align-items-center justify-content-center">
-            <a class="d-xl-none pt-3" href="https://www.youtube.com/watch?v=JnphWWm-mTU">
-                <img class="img-fluid rounded-3" src="../templates/assets/earthlings.jpg" alt="..." target="_blank"/>
-            </a>
+            <div class="image-container d-xl-none pt-3">
+                <a href="https://www.youtube.com/watch?v=JnphWWm-mTU">
+                    <img class="img-fluid rounded-3" src="../templates/assets/earthlings.jpg" alt="..." target="_blank"/>
+                    <div class="play-button"></div>
+                </a>
+            </div>
             <div class="col-lg-8 col-xl-7 col-xxl-6">
                 <div class="my-5 text-center text-xl-start">
                     <h1 class="display-5 fw-bolder text-white mb-2">Земляни</h1>
@@ -51,8 +54,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center">
-                <a href="https://www.youtube.com/watch?v=JnphWWm-mTU" target="_blank"><img class="img-fluid rounded-3 my-5" src="../templates/assets/earthlings.jpg" alt="..." target="_blank"/></a>
+            <div class="image-container col-xl-5 col-xxl-6 d-none d-xl-block text-center">
+                <a href="https://www.youtube.com/watch?v=JnphWWm-mTU" target="_blank">
+                    <img class="img-fluid rounded-3 my-5" src="../templates/assets/earthlings.jpg" alt="..." target="_blank"/>
+                    <div class="play-button"></div>
+                </a>
             </div>
         </div>
     </div>
