--- a/ru/apps.html
+++ b/ru/apps.html
@@ -90,6 +90,19 @@
         
         <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
             <div class="card h-100 shadow border-0">
+                <img height=210 class="card-img-top" src="../templates/assets/waffle.jpg" alt="..." style="object-fit: cover;">
+                <div class="card-body p-4">
+                    <a class="text-decoration-none link-dark stretched-link" href="https://www.instagram.com/waffledeer/" target="_blank">
+                        <div class="h5 card-title mb-1">Настя Лисица. Докмед нутрициолог, веган</div>
+                    </a>
+                    <div class="small text-muted mb-3">Рецепты, Instagram</div>
+                    <p class="card-text mb-0">Помогаю отказаться от мяса и делаю из людей здоровых веганов с 2018. 🤟 БЕЗ детоксов и страшилок про глютен</p>
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+            <div class="card h-100 shadow border-0">
                 <img height=210 class="card-img-top" src="../templates/assets/mikhveg.jpg" alt="..." style="object-fit: cover;">
                 <div class="card-body p-4">
                     <a class="text-decoration-none link-dark stretched-link" href="https://www.youtube.com/@mikhailvegan" target="_blank">
