--- a/ru/apps.html
+++ b/ru/apps.html
@@ -96,7 +96,7 @@
                         <div class="h5 card-title mb-1">Настя Лисица. Докмед нутрициолог, веган</div>
                     </a>
                     <div class="small text-muted mb-3">Рецепты, Instagram</div>
-                    <p class="card-text mb-0">Помогаю отказаться от мяса и делаю из людей здоровых веганов с 2018. 🤟 БЕЗ детоксов и страшилок про глютен</p>
+                    <p class="card-text mb-0">Помогаю отказаться от мяса и делаю из людей здоровых веганов с 2018. Без детоксов и страшилок про глютен</p>
                 </div>
             </div>
         </div>
@@ -132,7 +132,7 @@
                 <img height=210 class="card-img-top" src="../templates/assets/vegsyr_inst.jpg" alt="..." style="object-fit: cover;">
                 <div class="card-body p-4">
                     <a class="text-decoration-none link-dark stretched-link" href="https://www.instagram.com/veganstvo_syroedenie/" target="_blank">
-                        <div class="h5 card-title mb-1">🥗 Веганские рецепты каждый день</div>
+                        <div class="h5 card-title mb-1">Веганские рецепты каждый день</div>
                     </a>
                     <div class="small text-muted mb-3">Рецепты, Instagram</div>
                     <p class="card-text mb-0">Рецепты вкусных веганских и сыроедческих блюд.</p>
