--- a/uk/apps.html
+++ b/uk/apps.html
@@ -80,7 +80,7 @@
                 <img height=210 class="card-img-top" src="../templates/assets/faina.jpg" alt="..." style="object-fit: cover;">
                 <div class="card-body p-4">
                     <a class="text-decoration-none link-dark stretched-link" href="https://www.instagram.com/faina_veganka/" target="_blank">
-                        <div class="h5 card-title mb-1">100% робочі веган рецепти</div>
+                        <div class="h5 card-title mb-1">100% робочі веган-рецепти</div>
                     </a>
                     <div class="small text-muted mb-3">Рецепты, Instagram</div>
                     <p class="card-text mb-0">Веган-рецепти від Ірини із Маріуполя.</p>
