Add uk and ru books

--- a/ru/books.html
+++ b/ru/books.html
@@ -116,6 +116,19 @@
         
         <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
             <div class="card h-100 shadow border-0">
+                <img height=450 class="card-img-top" src="../templates/assets/torres0.png" alt="..." style="object-fit: cover;">
+                <div class="card-body p-4">
+                    <a class="text-decoration-none link-dark stretched-link" href="http://flibusta.is/b/591628" target="_blank">
+                        <div class="h5 card-title mb-1">Совершая убийство, или Политическая экономия прав животных</div>
+                    </a>
+                    <div class="small text-muted mb-3">Боб Торрес, 2007</div>
+                    <p class="card-text mb-0">Скажите среднестатистическому леваку, что права животных должны быть частью освободительной борьбы - над вами просто посмеются. Скажите зоозащитнику, что выдавать награды наиболее 'гуманным' мясобойням - значит просто продлевать страдания животных, - получите кучу аргументов против. Книга обнажает множество пересечений угнетения людей и животных.</p>
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+            <div class="card h-100 shadow border-0">
                 <img height=450 class="card-img-top" src="../templates/assets/veggie_people_books.png" alt="..." style="object-fit: cover;">
                 <div class="card-body p-4">
                     <a class="text-decoration-none link-dark stretched-link" href="https://veggiepeople.org/books" target="_blank">
