--- a/uk/books.html
+++ b/uk/books.html
@@ -62,6 +62,19 @@
             </div>
         </div>
         
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+            <div class="card h-100 shadow border-0">
+                <img height=450 class="card-img-top" src="../templates/assets/vaal0.jpg" alt="..." style="object-fit: cover;">
+                <div class="card-body p-4">
+                    <a class="text-decoration-none link-dark stretched-link" href="https://www.yakaboo.ua/ua/moral-bez-religii-v-poshukah-ljuds-kogo-u-primativ.html" target="_blank">
+                        <div class="h5 card-title mb-1">Мораль без релігії. В пошуках людського у приматів</div>
+                    </a>
+                    <div class="small text-muted mb-3">Франс де Вааль, 2013</div>
+                    <p class="card-text mb-0">Ми звикли, що мораль притаманна винятково людині. Ми пишаємося цим і тим, що саме моральність робить нас кращими за тварин. Але що, як це не так? Що, як саме у тварин варто шукати коріння людської моралі?</p>
+                </div>
+            </div>
+        </div>
+        
     </div>
 </div>
 
