--- a/en/films.html
+++ b/en/films.html
@@ -283,6 +283,19 @@
             </div>
         </div>
         
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+            <div class="card h-100 shadow border-0">
+                <img height=180 class="card-img-top" src="../templates/assets/forksoverknives.png" alt="..." style="object-fit: cover;">
+                <div class="card-body p-4">
+                    <a class="text-decoration-none link-dark stretched-link" href="https://www.forksoverknives.com/the-film/" target="_blank">
+                        <div class="h5 card-title mb-1">Forks Over Knives</div>
+                    </a>
+                    <div class="small text-muted mb-3">2011</div>
+                    <p class="card-text mb-0">What if one simple change could save you from chronic diseases such as diabetes and heart disease? Take a deep dive into the plant-based diet documentary that has influenced millions around the world.</p>
+                </div>
+            </div>
+        </div>
+        
     </div>
 </div>
 
