--- a/en/stat.html
+++ b/en/stat.html
@@ -114,6 +114,19 @@
             </div>
         </div>
         
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+            <div class="card h-100 shadow border-0">
+                <img height=210 class="card-img-top" src="../templates/assets/un_guardian.png" alt="..." style="object-fit: cover;">
+                <div class="card-body p-4">
+                    <a class="text-decoration-none link-dark stretched-link" href="https://www.theguardian.com/environment/2023/oct/20/the-anti-livestock-people-are-a-pest-how-un-fao-played-down-role-of-farming-in-climate-change" target="_blank">
+                        <div class="h5 card-title mb-1">‘The anti-livestock people are a pest’: how UN food body played down role of farming in climate change</div>
+                    </a>
+                    <div class="small text-muted mb-3">The Guardian</div>
+                    <p class="card-text mb-0">Ex-officials at the Food and Agriculture Organization say its leadership censored and undermined them when they highlighted how livestock methane is a major greenhouse gas.</p>
+                </div>
+            </div>
+        </div>
+        
     </div>
 </div>
 
