--- a/en/apps.html
+++ b/en/apps.html
@@ -127,6 +127,19 @@
             </div>
         </div>
         
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+            <div class="card h-100 shadow border-0">
+                <img height=210 class="card-img-top" src="../templates/assets/calculator.png" alt="..." style="object-fit: cover;">
+                <div class="card-body p-4">
+                    <a class="text-decoration-none link-dark stretched-link" href="https://thevegancalculator.com/" target="_blank">
+                        <div class="h5 card-title mb-1">The Vegan Calculator</div>
+                    </a>
+                    <div class="small text-muted mb-3">Website</div>
+                    <p class="card-text mb-0">A Vegan lifestyle saves animals, the environment & much more. Calculate how much you've saved.</p>
+                </div>
+            </div>
+        </div>
+        
     </div>
 </div>
 
