--- a/ru/stat.html
+++ b/ru/stat.html
@@ -103,6 +103,19 @@
         
         <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
             <div class="card h-100 shadow border-0">
+                <img height=210 class="card-img-top" src="../templates/assets/livestock.jpg" alt="..." style="object-fit: cover;">
+                <div class="card-body p-4">
+                    <a class="text-decoration-none link-dark stretched-link" href="https://eco-cosm.com/articles/globalno/vliyanie-zhivotnovodstva-na-okruzhayushhuyu-sredu" target="_blank">
+                        <div class="h5 card-title mb-1">Влияние животноводства на окружающую среду</div>
+                    </a>
+                    <div class="small text-muted mb-3">Журнал Ecocosm</div>
+                    <p class="card-text mb-0">Cпособны ли стада скота нанести какой-либо ощутимый вред природе? Рассмотрим каждое из направлений, в которых воздействие животноводства на природу выражено наиболее ярко.</p>
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-xl-3 col-lg-4 col-md-6 mb-5">
+            <div class="card h-100 shadow border-0">
                 <img height=210 class="card-img-top" src="../templates/assets/plastic_cup.jpg" alt="..." style="object-fit: cover;">
                 <div class="card-body p-4">
                     <a class="text-decoration-none link-dark stretched-link" href="https://oceanfdn.org/ru/plastic-in-the-ocean/" target="_blank">
